[package]
name = "lotus-sign"
version = "0.1.0"
edition = "2021"
description = "Filecoin wallet local signing tool"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
blst = "0.3"
sha2 = "0.10"
blake2b_simd = "1.0"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# CBOR encoding
ciborium = "0.2"

# BigInt
num-bigint = "0.4"
num-traits = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
